--- a/index2.html
+++ b/index2.html
@@ -554,6 +554,11 @@
             <h2>🚗 Көліктер дыбысы</h2>
             <p class="instruction">Дыбысты тыңдап, қандай көлік екенін анықтаңыз!</p>
 
+            <audio id="carAudio" src="sounds/transport/car.mp3"></audio>
+            <audio id="motorcycleAudio" src="sounds/transport/motorcycle.mp3"></audio>
+            <audio id="planeAudio" src="sounds/transport/plane.mp3"></audio>
+            <audio id="trainAudio" src="sounds/transport/train.mp3"></audio>
+
             <div class="letter-circle-container active" style="width: 500px; height: 500px; position: relative;">
               <div class="center-circle" onclick="playRandomVehicle()">🔊</div>
 
