--- a/index2.html
+++ b/index2.html
@@ -5,8 +5,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>🎧 Сиқырлы Дыбыстар Әлемі</title>
-  <link rel="stylesheet" href="index2.css">
-  <link rel="stylesheet" href="alippe.css">
+  <link rel="stylesheet" href="index2.css?v=2026">
+  <link rel="stylesheet" href="alippe.css?v=2026">
+  <style>
+    /* FORCE ALIPPE STYLE (Cache Buster) */
+    .alippe-panel {
+      width: 680px !important;
+      margin-left: 20px !important;
+      background: rgba(255, 255, 255, 0.15) !important;
+    }
+
+    .alippe-grid {
+      grid-template-columns: repeat(auto-fill, minmax(75px, 1fr)) !important;
+      padding-bottom: 50px !important;
+    }
+
+    /* FORCE THEME TOGGLE VISIBILITY */
+    .theme-toggle-wrapper {
+      position: absolute !important;
+      top: 20px !important;
+      right: 20px !important;
+      z-index: 9999 !important;
+      display: block !important;
+    }
+  </style>
 </head>
 
 <body>
@@ -87,6 +109,15 @@
 
   <div class="coins-display">
     🪙 <span id="coinCount">0</span>
+  </div>
+
+  <div class="theme-toggle-wrapper">
+    <input type="checkbox" class="theme-checkbox" id="themeChk">
+    <label class="theme-label" for="themeChk">
+      <div class="theme-ball"></div>
+      <span class="icon-sun">☀️</span>
+      <span class="icon-moon">🌙</span>
+    </label>
   </div>
 
   <div class="container">
