--- a/index2.html
+++ b/index2.html
@@ -442,7 +442,7 @@
           <!-- Train Animation -->
           <div id="voiceTrainContainer"
             style="display:none; text-align:center; padding: 20px; position: relative; height: 150px; margin-top: 50px;">
-            <div style="width: 90%; max-width: 600px; margin: 0 auto; position: relative;">
+            <div style="width: 300px; max-width: 600px; margin: 0 auto; position: relative;">
               <!-- Train Icon: Absolute positioned on top of the bar track -->
               <!-- Initial left: 0%. Will update via JS to match progress -->
               <div id="trainIcon"
